--- a/azure/deployment.env
+++ b/azure/deployment.env
@@ -1,4 +1,10 @@
+# For a new deployment, fill in these values and rename to 'deployment.env'.
+
+# Tenant and subscription in which to create all resources.
 export AAD_TENANT="b7e69ef3-619e-4cb7-a4e5-80110816cdf7"
 export AZURE_SUBSCRIPTION="12ab51c6-da79-4a99-8dec-3d2decc97343"
-export DEPLOYMENT_NAME="azcpg003"
+# Master deployment name, used to derive main resource group name (${DEPLOYMENT_NAME}-rg) and
+# various other resources. Must be unique across Azure, between 8-16 lowercase characters and numbers only.
+export DEPLOYMENT_NAME="azcpg005"
+# Azure region (e.g. "australiaeast").
 export LOCATION="eastus"
